--- a/CSS/Leon.css
+++ b/CSS/Leon.css
@@ -166,7 +166,7 @@ header .links ul li:not(:last-child) a {
 
 /* Start Landing */
 .landing {
-  background-image: url(../Images/mountain-black-and-white.jpeg);
+  background-image: url(../Images/mountain-black-and-white.png);
   background-size: cover;
   width: 100%;
   height: calc(100vh - 64px);
@@ -260,7 +260,7 @@ header .links ul li:not(:last-child) a {
 .services .container .services-content .col .image {
   width: 300px;
   height: 300px;
-  background-image: url(../Images/mountain-black-and-white2.jpg);
+  background-image: url(../Images/mountain-black-and-white2.png);
   background-size : cover;
   position: relative;
   top: 30px
